[package]
edition = "2024"
name = "pibow-node"
version = "0.1.0"


[dependencies]
embassy-embedded-hal = { version = "0.3.1", path = "./embassy/embassy-embedded-hal", features = ["defmt"] }
embassy-sync = { version = "0.7.0", path = "./embassy/embassy-sync", features = ["defmt"] }
embassy-executor = { version = "0.7.0", path = "./embassy/embassy-executor", features = ["arch-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-time = { version = "0.4.0", path = "./embassy/embassy-time", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-rp = { version = "0.6.0", path = "./embassy/embassy-rp", features = ["defmt", "unstable-pac", "time-driver", "critical-section-impl", "rp2040"] }
embassy-usb = { version = "0.5.0", path = "./embassy/embassy-usb", features = ["defmt"] }
embassy-net = { version = "0.7.0", path = "./embassy/embassy-net", features = ["defmt", "icmp", "tcp", "udp", "raw", "dhcpv4", "medium-ethernet", "dns", "proto-ipv4", "proto-ipv6", "multicast"] }
embassy-net-wiznet = { version = "0.2.0", path = "./embassy/embassy-net-wiznet", features = ["defmt"] }
embassy-futures = { version = "0.1.0", path = "./embassy/embassy-futures" }
cyw43 = { version = "0.4.0", path = "./embassy/cyw43", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.5.1", path = "./embassy/cyw43-pio", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
heapless = "0.8"

embedded-hal-1 = { package = "embedded-hal", version = "1.0" }
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.1", features = ["async"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
static_cell = "2.1"
portable-atomic = { version = "1.5", features = ["critical-section"] }
log = "0.4"
rand = { version = "0.9.0", default-features = false }
blake3 = { version = "1.8.2", default-features = false }

[profile.release]
# Enable generation of debug symbols even on release builds
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
